test/mutation_analysis/s0045_jump_game_ii/hafis/ablation_o3_full/mutants/6/result.txt
./test/mutation_analysis/s0045_jump_game_ii/hafis/ablation_o3_full/mutants/6/Solution.java:21: error: unreachable statement
        for (int i = 0; false; ++i) {
                                    ^
1 error
